cncProd/force-app/main/default/objects/Package_Accs__c/fields/Accessories_Master__c.field-meta.xml
<CustomField>
    <fullName>Accessories_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accessories Master</label>
    <referenceTo>Accessories_Master__c</referenceTo>
    <relationshipLabel>Accessories Master</relationshipLabel>
    <relationshipName>Package_Accs</relationshipName>
    <type>Lookup</type>
</CustomField>