cncProd/force-app/main/default/objects/Package_Accs__c/fields/Package_Header__c.field-meta.xml
<CustomField>
    <fullName>Package_Header__c</fullName>
    <label>Package Header</label>
    <referenceTo>Package_Header__c</referenceTo>
    <relationshipLabel>Package Accs</relationshipLabel>
    <relationshipName>Package_Accs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>