cncProd/force-app/main/default/objects/Package_Accs__c/fields/PKA_ACM_ACCSCD__c.field-meta.xml
<CustomField>
    <fullName>PKA_ACM_ACCSCD__c</fullName>
    <label>Accs Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>