cncProd/force-app/main/default/objects/Package_Accs__c/fields/PKA_ACM_ACCSDESC__c.field-meta.xml
<CustomField>
    <fullName>PKA_ACM_ACCSDESC__c</fullName>
    <formula>Accessories_Master__r.ACM_ACCSDESC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>