cncProd/force-app/main/default/objects/Package_Accs__c/fields/PKA_PKH_FRNCD__c.field-meta.xml
<CustomField>
    <fullName>PKA_PKH_FRNCD__c</fullName>
    <label>Franchise Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>