cncProd/force-app/main/default/objects/Package_Accs__c/fields/PKA_PKH_UNIQUEBRCD__c.field-meta.xml
<CustomField>
    <fullName>PKA_PKH_UNIQUEBRCD__c</fullName>
    <label>Branch Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>