cncProd/force-app/main/default/objects/Package_Accs__c/fields/PKA_QTY__c.field-meta.xml
<CustomField>
    <fullName>PKA_QTY__c</fullName>
    <label>Quantity</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>