cncProd/force-app/main/default/objects/Package_Accs__c/fields/PKA_REBATE__c.field-meta.xml
<CustomField>
    <fullName>PKA_REBATE__c</fullName>
    <label>Rebate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>