cncProd/force-app/main/default/objects/Package_Accs__c/fields/PKA_VALUE__c.field-meta.xml
<CustomField>
    <fullName>PKA_VALUE__c</fullName>
    <label>Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>