cncProd/force-app/main/default/objects/Package_Accs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Accessories_Master__c</columns>
    <columns>PKA_ACM_ACCSCD__c</columns>
    <columns>PKA_ACM_ACCSDESC__c</columns>
    <columns>PKA_DISPLAY__c</columns>
    <columns>DisplayOrder__c</columns>
    <columns>PKA_INCPRICE__c</columns>
    <columns>Package_Header__c</columns>
    <columns>PKA_PKH_PKGNO__c</columns>
    <columns>PKA_QTY__c</columns>
    <columns>PKA_RATE__c</columns>
    <columns>PKA_REMOVABLE__c</columns>
    <columns>PKA_VALUE__c</columns>
    <columns>PKA_PRINT__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>